--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -224,7 +224,9 @@
 	Month = apr,
 	Title = {{NSF} Workshop on Supporting Scientific Discovery through Norms and Practices for Software and Data Citation and Attribution},
 	Year = {2015},
-	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=2795624}}
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=2795624},
+	note = {Available at: \url{http://dl.acm.org/citation.cfm?id=2795624}},
+}
 
 @article{Allen:2015ub,
 	Author = {Allen, Alice and Berriman, G Bruce and DuPrie, Kimberly and Mink, Jessica and Nemiroff, Robert and Robitaille, Thomas and Shamir, Lior and Shortridge, Keith and Taylor, Mark and Teuben, Peter and Wallin, John},
@@ -236,7 +238,9 @@
 	Month = dec,
 	Title = {Improving Software Citation and Credit},
 	Year = {2015},
-	Bdsk-Url-1 = {http://arxiv.org/abs/1512.07919v1}}
+	Bdsk-Url-1 = {http://arxiv.org/abs/1512.07919v1},
+	note={Available at: \url{http://arxiv.org/abs/1512.07919v1}},
+}
 
 @article{Chawla:2016te,
 	Author = {Chawla, Dalmeet Singh},
@@ -260,7 +264,9 @@
 	Series = {SECSE},
 	Title = {How Do Scientists Develop and Use Scientific Software?},
 	Year = {2009},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1109/SECSE.2009.5069155}}
+	url = {\url{http://dx.doi.org/10.1109/SECSE.2009.5069155}},
+	doi = {10.1109/SECSE.2009.5069155}
+}
 
 @article{Merali:2010tw,
 	Author = {Merali, Zeeya},
@@ -283,7 +289,9 @@
 	Title = {Shining Light into Black Boxes},
 	Volume = {336},
 	Year = {2012},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1126/science.1218263}}
+	Url = {\url{http://dx.doi.org/10.1126/science.1218263}},
+	doi={10.1126/science.1218263},
+}
 
 @article{Sandve:2013gh,
 	Author = {Sandve, Geir Kjetil and Nekrutenko, Anton and Taylor, James and Hovig, Eivind},
@@ -296,7 +304,9 @@
 	Title = {Ten Simple Rules for Reproducible Computational Research},
 	Volume = {9},
 	Year = {2013},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1371/journal.pcbi.1003285}}
+	Url = {\url{http://dx.doi.org/10.1371/journal.pcbi.1003285}},
+	doi={10.1371/journal.pcbi.1003285},
+}
 
 @inproceedings{Sufi:2014en,
 	Address = {Edinburgh, United Kingdom},
@@ -333,7 +343,9 @@
 	Title = {Rampant software errors may undermine scientific results [version 2; referees: 2 approved]},
 	Volume = {3},
 	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.12688/f1000research.5930.2}}
+	url = {\url{http://dx.doi.org/10.12688/f1000research.5930.2}},
+	doi = {10.12688/f1000research.5930.2},
+}
 
 @article{Wilson:2014aa,
 	Abstract = {<sec><title/><p>We describe a set of best practices for scientific software development, based on research and experience, that will improve scientists' productivity and the reliability of their software.</p></sec>},
@@ -580,7 +592,9 @@
 	Title = {Report on the Second Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE2)}},
 	Volume = {4},
 	Year = {2016},
-	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.85}}
+	url = {\url{http://dx.doi.org/10.5334/jors.85}},
+	doi = {10.5334/jors.85},
+}
 
 @article{Downs:2015aa,
 	Author = {Robert R Downs and W. Christopher Lenhardt and Erin Robinson and Ethan Davis and Nicholas Weber},
@@ -641,7 +655,8 @@
 	Author = {Daniel S. Katz and Kyle E. Niemeyer and Sou-Cheng T. Choi and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
 	Date-Added = {2016-01-11 21:38:20 +0000},
 	Date-Modified = {2016-03-23 01:05:41 +0000},
-	Note = {Submitted. {\tt \href{http://arxiv.org/abs/1602.02296}{arXiv:1602.02296} [cs.SE]}},
+	Journal = {Journal of Open Research Software},
+	Note = {Submitted. Available at: \url{http://arxiv.org/abs/1602.02296}},
 	Title = {Report on the Third Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE3)}},
 	Year = {2016}}
 
@@ -674,3 +689,83 @@
 	Note = {Accessed: 2016-03-16},
 	Title = {{Reference List: Electronic Sources (Web Publications)}},
 	Year = {2015}}
+
+
+@article{belter2014,
+    author = {Belter, Christopher W.},
+    journal = {PLoS ONE},
+    publisher = {Public Library of Science},
+    title = {Measuring the Value of Research Data: A Citation Analysis of Oceanographic Data Sets},
+    year = {2014},
+    month = {03},
+    volume = {9},
+    url = {\url{http://dx.doi.org/10.1371%2Fjournal.pone.0092590}},
+    pages = {1--9},
+    number = {3},
+    doi = {10.1371/journal.pone.0092590}
+}
+
+@inproceedings{howison-herbsleb2011,
+ author = {Howison, James and Herbsleb, James D.},
+ title = {Scientific Software Production: Incentives and Collaboration},
+ booktitle = {Proceedings of the ACM 2011 Conference on Computer Supported Cooperative Work},
+ series = {CSCW '11},
+ year = {2011},
+ isbn = {978-1-4503-0556-3},
+ location = {Hangzhou, China},
+ pages = {513--522},
+ numpages = {10},
+ url = {\url{http://doi.acm.org/10.1145/1958824.1958904}},
+ doi = {10.1145/1958824.1958904},
+ acmid = {1958904},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {scholarly publishing, scientific software, software development, software ecosystem},
+} 
+
+@inproceedings{huang2013,
+ author = {Huang, Xing and Ding, Xianghua and Lee, Charlotte P. and Lu, Tun and Gu, Ning},
+ title = {Meanings and Boundaries of Scientific Software Sharing},
+ booktitle = {Proceedings of the 2013 Conference on Computer Supported Cooperative Work},
+ series = {CSCW '13},
+ year = {2013},
+ isbn = {978-1-4503-1331-5},
+ location = {San Antonio, Texas, USA},
+ pages = {423--434},
+ numpages = {12},
+ url = {\url{http://doi.acm.org/10.1145/2441776.2441825}},
+ doi = {10.1145/2441776.2441825},
+ acmid = {2441825},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {scientific collaboration, software sharing},
+} 
+
+@article{mcnaught2015,
+ title={The Changing Publication Practices in Academia: Inherent Uses and Issues in Open Access and Online Publishing and the Rise of Fraudulent Publications},
+ author={Keith McNaught},
+ volume={18},
+ issue={3},
+ year={2015},
+ month={Summer},
+ url={/url{http://dx.doi.org/10.3998/3336451.0018.308}},
+ doi={10.3998/3336451.0018.308},
+ journal={The Journal of Electronic Publishing},
+}
+
+@article{Pan2015,
+title = "Assessing the impact of software on science: A bootstrapped learning of software entities in full-text papers ",
+journal = "Journal of Informetrics ",
+volume = "9",
+number = "4",
+pages = "860 - 871",
+year = "2015",
+note = "",
+issn = "1751-1577",
+doi = "http://dx.doi.org/10.1016/j.joi.2015.07.012",
+url = "http://www.sciencedirect.com/science/article/pii/S1751157715300602",
+author = "Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua",
+}
+
+
+ 
