--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -284,9 +284,9 @@ Finally, open questions remain on whether citable software should go through pee
 Should citable software itself follow the arXiv preprint model where releases are made available for users and the community to judge, or alternatively, the software paper model where ``advertising'' papers undergo peer review in a relevant community?
 
 
- Acknowledgments
 \begin{acks}
 The authors wish to thank the members of the SciSIP community and mailing list, in particular Chris Belter, James Howison, and Joshua Rosenbloom, for a useful discussion on incentives for software publications and how their impact has and could further be measured.
+In addition, the authors acknowledge members of the FORCE11 Software Citation Working Group, whose views contributed to this document.
 \end{acks}
 
 % Bibliography
