some edits in sections 2 & 3

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -184,9 +184,9 @@ As a first step towards sustainable, reusable, and attributable software, effort
 \section{Related Work}
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
-Multiple organizations, including the WSSSPE Software Credit~\cite{WSSSPE1,WSSSPE2,WSSSPE3} and FORCE11 Software Citation Working Groups, are working to standardize software citation practices.
+Multiple organizations, including the WSSSPE Software Credit working group~\cite{WSSSPE1,WSSSPE2,WSSSPE3} and FORCE11 Software Citation Working Group~\citeyear{SCWG}, are working to standardize software citation practices.
 Some of the observations and recommendations made here come from their efforts, which follow similar work by DataCite and the FORCE11~\citeN{DataCitation2014} to standardize research data citation practices.
-Currently, services including Zenodo or fig\textbf{share} allow software developers to obtain DOIs for software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
+Currently, services including Zenodo or fig\textbf{share} allow software developers to obtain DOIs for software; the former has a streamlined process~\citeyear{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
 \knnote{mention workshops on software citation; University of Manchester (? can't actually find that one). Additional references are good.} 
@@ -197,7 +197,7 @@ The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in 
 \url{http://astronomy-software-index.github.io/2015-workshop/} \\
 \url{https://geodynamics.org/cig/projects/saga/} \\
 maybe \url{http://software.ac.uk/maintainable-software-practice-workshop}}
-\knnote{Workshop reports} \cite{Sufi:2014en,Ahalt:2015ve}; Software Publishing Special Interest Group\cite{Allen:2015ub}
+\knnote{Workshop reports} \cite{Sufi:2014en,Ahalt:2015ve}; Software Publishing Special Interest Group~\cite{Allen:2015ub}
 
 \katznote{Arfon, are the more that showed up in related work in the software citation activity?}
 
@@ -253,7 +253,7 @@ In arguing the need for software citation, we simultaneously introduce the quest
 Although there is no clear answer to this question, we argue that ensuring reproducibility of research results requires citation of software if used directly and important to research results.
 In other words, if using different software could produce different data or results, then the software used should be cited.
 
-The authors of this paper are currently leading a working group under FORCE11 to develop principles for software citation~\cite{SCWG}.
+The authors of this paper are currently leading the FORCE11 Software Citation Working Group to develop principles for software citation~\citeyear{SCWG}.
 The draft principles document~\cite{SoftwareCitation2016}, which is adapted from an earlier set of principles for data citation~\cite{DataCitation2014}, discusses how to decide what software to cite:
 
 \begin{quote}
