small wording change in ack

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -287,7 +287,7 @@ Should citable software itself follow the arXiv preprint model where releases ar
 
 
 \begin{acks}
-The authors wish to thank the members of the SciSIP community and mailing list, in particular Chris Belter, James Howison, and Joshua Rosenbloom, for a useful discussion on incentives for software publications and how their impact has and could further be measured.
+The authors wish to thank the members of the SciSIP community and mailing list, in particular Chris Belter, James Howison, and Joshua Rosenbloom, for a useful discussion on incentives for software publications and how their impact has been and could further be measured.
 In addition, the authors acknowledge members of the FORCE11 Software Citation Working Group, whose views contributed to this document.
 \end{acks}
 
