wording change in a comment, added another comment

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -199,7 +199,7 @@ The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in 
 maybe \url{http://software.ac.uk/maintainable-software-practice-workshop}}
 \knnote{Workshop reports} \cite{Sufi:2014en,Ahalt:2015ve}; Software Publishing Special Interest Group~\cite{Allen:2015ub}
 
-\katznote{Arfon, are the more that showed up in related work in the software citation activity?}
+\katznote{Arfon, are there more that showed up in related work in the software citation activity?}
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
 These include the transitive credit via JSON-LD scheme~\cite{Katz:2015aa} that assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
@@ -273,7 +273,7 @@ These statements may also be true for software products.
 In general, we intend the software citation principles to cover the minimum of what is necessary for software citation for the purpose of software identification.
 Other use cases (e.g., provenance, reproducibility) may lead to additional requirements (i.e., enhanced metadata).
 \end{quote}
-\knnote{I worry that including this whole note is too much, especially if we plan to publish the principles}
+\knnote{I worry that including this whole note is too much, especially if we plan to publish the principles} \katznote{feel free to edit to down}
 
 
 However, research and development efforts are needed to solve the remaining challenges.
