--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -163,8 +163,8 @@ A 2009 survey of scientists found that 91\% consider software important or very 
 The scientific community uses citation to acknowledge traditional research results published in archival journals and conferences, but no such accepted standard exists to credit the considerable efforts that go into software---and most research software is not cited~\cite{Pan2015}.
 
 One method to increase the amount of software developed, shared, and credited is to treat a software release as a publication.
-There is good evidence that academics respond to incentives, including interview and survey data saying that increased citation would drive increased software development and sharing~\cite{howison-herbsleb2011,huang2013}. 
-Furthermore, evidence indicates that research activity increases when outputs can be formally counted~\cite{mcnaught2015}. 
+There is good evidence that academics respond to incentives, including interview and survey data saying that increased citation would drive increased software development and sharing~\cite{howison-herbsleb2011,huang2013}.
+Furthermore, evidence indicates that research activity increases when outputs can be formally counted~\cite{mcnaught2015}.
 Finally, the evidence of success in direct citations to datasets~\cite{belter2014}---as opposed to indirect citations through publications---suggests similar positive benefits of software citation.
 
 In addition to the above benefits, since research results depend on the specific software used (e.g., version), proper citation---and the associated preservation---is necessary to ensure reproducibility~\cite{Sufi:2014en}.
@@ -186,10 +186,10 @@ As a first step towards sustainable, reusable, and attributable software, effort
 
 Multiple organizations, including the WSSSPE Software Credit working group~\cite{WSSSPE1,WSSSPE2,WSSSPE3} and FORCE11 Software Citation Working Group~\citeyear{SCWG}, are working to standardize software citation practices.
 Some of the observations and recommendations made here come from their efforts, which follow similar work by DataCite and the FORCE11~\citeN{DataCitation2014} to standardize research data citation practices.
-Currently, services including Zenodo or fig\textbf{share} allow software developers to obtain DOIs for software; the former has a streamlined process~\citeyear{GitHubZenodo} to register DOIs for GitHub software releases.
+Currently, services including Zenodo and fig\textbf{share} allow software developers to obtain DOIs for software; the former has a streamlined process~\citeyear{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
-\knnote{mention workshops on software citation; University of Manchester (? can't actually find that one). Additional references are good.} 
+\knnote{mention workshops on software citation; University of Manchester (? can't actually find that one). Additional references are good.}
 
 \katznote{Some ideas: \\
 \url{https://softwaredatacitation.org/} \\
@@ -222,23 +222,23 @@ Key challenges and research directions (with possible solutions\slash methods) a
 \textbf{Key research Challenge} & \textbf{Possible solutions/methods} \\
 \midrule
 
-Identify necessary metadata associated with software for citation & 
+Identify necessary metadata associated with software for citation &
 We suggest metadata below, and the CodeMeta project~\cite{CodeMeta} is working to determine minimal metadata \\
 
-Standardize proper formats for citing software in publications & 
+Standardize proper formats for citing software in publications &
 The FORCE11 Software Citation Working Group is currently working to define and gain community acceptance for software citation principles, after which (starting in April 2016) a follow-on group will initiate implementation activities. Part of the charge for this group will be to work with publishers on this challenge \\
 
-Establish mechanisms for software to cite other software (i.e., dependencies) & 
+Establish mechanisms for software to cite other software (i.e., dependencies) &
 Software publication as software papers allows this. For software that is directly published, this is an open challenge with no obvious path forward \\
 
-Develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem & 
+Develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem &
 The FORCE11 software citation implementation working group will also work on this, in collaboration with publishers and indexers \\
 
-Determine standard practices for peer review of software & 
+Determine standard practices for peer review of software &
 Professional societies and science communities need to determine how this will happen \\
 
-Increase cultural acceptance of the concept of software as a digital product & 
-Acceptance will happen over time; unclear how to accelerate \\ 
+Increase cultural acceptance of the concept of software as a digital product &
+Acceptance will happen over time; unclear how to accelerate \\
 \bottomrule
 \end{tabular}}
 \end{table}
