Adding some conference references

--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -721,7 +721,7 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {scholarly publishing, scientific software, software development, software ecosystem},
-} 
+}
 
 @inproceedings{huang2013,
  author = {Huang, Xing and Ding, Xianghua and Lee, Charlotte P. and Lu, Tun and Gu, Ning},
@@ -739,7 +739,7 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {scientific collaboration, software sharing},
-} 
+}
 
 @article{mcnaught2015,
  title={The Changing Publication Practices in Academia: Inherent Uses and Issues in Open Access and Online Publishing and the Rise of Fraudulent Publications},
@@ -767,5 +767,26 @@ url = "http://www.sciencedirect.com/science/article/pii/S1751157715300602",
 author = "Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua",
 }
 
+@misc{swdatacite,
+	Key = {Software and Data Citation Workshops},
+	Howpublished = {\url{https://softwaredatacitation.org/}},
+	Note = {Accessed: 2016-04-06},
+	Title = {{Workshop on Supporting Scientific Discovery through Norms and Practices for Software and Data Citation and Attribution}}}
 
- 
+@misc{ssisoftwarecredit,
+	Key = {SSI Software Credit},
+	Howpublished = {\url{http://www.software.ac.uk/software-credit}},
+	Note = {Accessed: 2016-04-06},
+	Title = {{Software Credit Workshop}}}
+
+@misc{aas-software-index,
+	Author = {Laura Nor\'en},
+	Howpublished = {\url{http://astronomy-software-index.github.io/2015-workshop/}},
+	Note = {Accessed: 2016-04-06},
+	Title = {Invitation to comment on a proposal for a cohesive research software citation-enabling platform}}
+
+@misc{saga,
+	Key = {Saga Software Credit},
+	Howpublished = {\url{https://geodynamics.org/cig/projects/saga/}},
+	Note = {Accessed: 2016-04-06},
+	Title = {{Software for Science: Getting Credit for Code}}}
